# wechat-log-catcher

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  vcpkg-configuration.json  vcpkg.json
src/: dll_main.cpp  export.h  global_context.cpp  global_context.h  library.h  log.cpp  log.h  pch.h  singleton.h  typedef.h  wechat_app_log_hook.cpp  wechat_app_log_hook.h  wechat_cloud_log.cpp  wechat_cloud_log.h  wechat_cloud_log_hook.cpp  wechat_cloud_log_hook.h  wechat_common.cpp  wechat_common.h  wechat_log.cpp  wechat_log.h  wechat_offset.h
src/utils/: hook_utils.cpp  hook_utils.h
